page description class styling

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -14,7 +14,7 @@
         <img src="images/baby-coding-bunny-700px.png" class="header-img">
         
         <h1>baby coding bunny projects</h1>
-        <p>Pokem ipsum dolor sit amet Misdreavus Dusknoir Larvitar Solrock a wild Pokemon appeared Vanillite. Water Roselia Fog Badge Bubble Deerling Cresselia Typhlosion. Lorem ipsum dolor sit amet Teddiursa Zubat Flareon Sonic Boom Marsh Badge Misty. Celadon City Roselia Poison Charizard Magikarp Espeon Bisharp. Leaf Green Porygon Cloyster Medicham Woobat Soda Pop Croagunk.</p>
+        <p class="page-description">Pokem ipsum dolor sit amet Misdreavus Dusknoir Larvitar Solrock a wild Pokemon appeared Vanillite. Water Roselia Fog Badge Bubble Deerling Cresselia Typhlosion. Lorem ipsum dolor sit amet Teddiursa Zubat Flareon Sonic Boom Marsh Badge Misty. Celadon City Roselia Poison Charizard Magikarp Espeon Bisharp. Leaf Green Porygon Cloyster Medicham Woobat Soda Pop Croagunk.</p>
         
         <h4>Simple 1-page websites (2023)</h4>
         <div class="skillcrush-archive-projects">
