hey bunny page URL added to header image

--- a/hey-bunny-hey.html
+++ b/hey-bunny-hey.html
@@ -12,20 +12,9 @@
 </head>
 
 <body>
-    <a href="hey-bunny-hey.html">
-    <img src="images/coding-bunny-sunglasses-700px.png" class="header-img"></a>
-    <h1>put the bunny back in the box (model)</h1>
-    <div class="courses">
-        <h2>freecodecamp responsive web dev <a href="freecodecamp.html">projects</a></h2>
-        <h2>Scrimba <a href="scrimba.html">exercises + notes [2023]</a></h2>
-        <h2>Skillcrush refresher + Javascript course <a href="skillcrush.html">projects [2023]</a></h2>
-        
-    </div>
-    <div class="courses">
-        <h2>🐇 <a href="about.html">ABOUT PROJECTS</a> ⚡️</h2>
-        <h2>🐰 <a href="credits.html">CREDITS</a> ✨</h2>
-        <h2>👋 vhf <a href="https://github.com/Victoria-Farr">GITHUB</a> 🕸️</h2>
-    </div>
+    <img src="#" class="header-img">
+    <h1>Year of the rabbit.</h1>
+    <p>Pokem ipsum dolor sit amet Normal Dewgong Hariyama they're comfy and easy to wear Aggron Wing Attack. Lorem ipsum dolor sit amet Ferrothorn Staravia Bellsprout Giovanni Pokeball Abomasnow. Grass we're blasting off again Beldum Zoroark Cacnea Whimsicott Lillipup. Sed do eiusmod tempor incididunt Vespiquen Tyrogue Satoshi Tajiri Pikachu Missingno Houndour. Sed do eiusmod tempor incididunt Tympole Feebas Glalie Cubone Azurill Druddigon.</p>
     <hr>
 </body>
 
