--- a/hey-bunny-hey.html
+++ b/hey-bunny-hey.html
@@ -11,8 +11,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
-<body>
-    <img src="#" class="header-img">
+<body class="hey-bunny-page">
+    <img src="images/reading-bunny-700px.png" class="header-img">
     <h1>Year of the rabbit.</h1>
     <p>Pokem ipsum dolor sit amet Normal Dewgong Hariyama they're comfy and easy to wear Aggron Wing Attack. Lorem ipsum dolor sit amet Ferrothorn Staravia Bellsprout Giovanni Pokeball Abomasnow. Grass we're blasting off again Beldum Zoroark Cacnea Whimsicott Lillipup. Sed do eiusmod tempor incididunt Vespiquen Tyrogue Satoshi Tajiri Pikachu Missingno Houndour. Sed do eiusmod tempor incididunt Tympole Feebas Glalie Cubone Azurill Druddigon.</p>
     <hr>
