--- a/scrimba.html
+++ b/scrimba.html
@@ -10,7 +10,8 @@
 
     </head>
     <body>
-        <img src="images/coding-bunny-stands-700px.png" class="header-img">
+        <a href="hey-bunny-hey.html">
+        <img src="images/coding-bunny-stands-700px.png" class="header-img"></a>
         <h1>Scrimba exercise notes + projects</h1>
             <ul>
                 <li>
