--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
     </div>
     <div class="courses">
-        <h2>🐇 <a href="about.html">ABOUT PROJECTS</a> ⚡️</h2>
+        <h2>🐇 <a href="about.html">About</a> ⚡️</h2>
         <h2>👋 vhf <a href="https://github.com/Victoria-Farr">GITHUB</a> 🕸️</h2>
     </div>
     <hr>
@@ -37,6 +37,7 @@
             <li><a href="skillcrush.html">Skillcrush</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="https://github.com/Victoria-Farr">GitHub</a></li>
+            <li><a href="hey-bunny-hey.html">⚡️🐇✨</a></li>
         </ul>
     </nav>
 </footer>
