FCC styling to purple theme

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <img src="images/coding-bunny-sunglasses-700px.png" class="header-img"></a>
     <h1>put the bunny back in the box (model)</h1>
     <div class="courses">
-        <h2>freecodecamp responsive web dev <a href="freecodecamp.html">projects</a></h2>
-        <h2>Scrimba <a href="scrimba.html">exercises + notes [2023]</a></h2>
-        <h2>Skillcrush refresher + Javascript course <a href="skillcrush.html">projects [2023]</a></h2>
+        <h2>💻 freecodecamp responsive web dev <a href="freecodecamp.html">projects</a></h2>
+        <h2>👩🏻‍💻 Scrimba <a href="scrimba.html">exercises + notes [2023]</a></h2>
+        <h2>💾 Skillcrush  <a href="skillcrush.html">projects [2023-2021]</a></h2>
         
     </div>
     <div class="courses">
-        <h2>🐇 <a href="about.html">About</a> ⚡️</h2>
-        <h2>👋 vhf <a href="https://github.com/Victoria-Farr">GITHUB</a> 🕸️</h2>
+        <h2>🐇 <a href="about.html">About</a></h2>
+        <h2>👋 vhf <a href="https://github.com/Victoria-Farr">GITHUB</a></h2>
     </div>
     <hr>
 </body>
@@ -37,7 +37,7 @@
             <li><a href="skillcrush.html">Skillcrush</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="https://github.com/Victoria-Farr">GitHub</a></li>
-            <li><a href="hey-bunny-hey.html">⚡️🐇✨</a></li>
+            <li><a href="hey-bunny-hey.html"> About ⚡️🐇✨</a></li>
         </ul>
     </nav>
 </footer>
