--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         
     </div>
     <div class="courses">
-        <h2>🐇 <a href="about.html">About</a></h2>
-        <h2>👋 vhf <a href="https://github.com/Victoria-Farr">GITHUB</a></h2>
+        <!-- FOR ANOTHER SECTION OF COURSES, IF I GET AROUND TO ANY MORE THIS YEAR!-->
     </div>
     <hr>
 </body>
