github <nav> icon experiment removed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li><a href="skillcrush.html">Skillcrush</a></li>
             <li><a href="scrimba.html">Scrimba</a></li>
             <li><a href="https://github.com/Victoria-Farr">GitHub</a></li>
-            <li><a href="hey-bunny-hey.html"> ?⚡️🐇✨?</a></li>
+            <li><a href="hey-bunny-hey.html"> ?🐇?</a></li>
         </ul>
     </nav>
 </footer>
