--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -14,6 +14,7 @@
         <a href="hey-bunny-hey.html">
         <img src="images/rabbit-purple-circle 3.png" class="header-img"></a>
         <h1><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank">freecodecamp</a> responsive web dev certification projects.</h1>
+        <h2>Responsive Web Development Certification → Exercises</h2>
         <p>Pokem ipsum dolor sit amet Bayleef Heatmor Ferrothorn Drilbur Magneton Shellos. Hydro Pump Houndour Wing Attack Fog Badge Paras Slowbro Magneton. Ut aliquip ex ea commodo consequat Scrafty Dewgong Palkia Torterra Meditite et dolore magna aliqua. Glacier Badge gotta catch 'em all Weepinbell Grovyle Cottonee Genesect Viridian City. Fire Red to protect the world from devastation Simisear Gallade Cobalion Grotle Tepig.</p>
 
             <div class="fcc-projects">
