--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -17,6 +17,13 @@
         <h2>Responsive Web Development Certification → Exercises</h2>
         <ul>
             <h4>1</h4>
+            <li>Learn HTML by Building a Cat Photo App</li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul><ul>
+            <h4>2</h4>
             <li></li>
         </ul>
 
