add rest of <li> for exercise section 1

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -18,9 +18,9 @@
         <ul>
             <h4>1</h4>
             <li>Learn HTML by Building a Cat Photo App</li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Learn Basic CSS by Building a Cafe Menu</li>
+            <li>Learn CSS Colors by Building a Set of Color Markers</li>
+            <li>Learn HTML forms by Building a Registration Form</li>
             <li></li>
         </ul><ul>
             <h4>2</h4>
