add <div> for exercises section

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -15,7 +15,8 @@
         <img src="images/rabbit-purple-circle 3.png" class="header-img"></a>
         <h1><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank">freecodecamp</a> responsive web dev certification projects.</h1>
         <h2>Responsive Web Development Certification → Exercises</h2>
-        <ul>
+        
+        <div class="exercises"><ul>
             <h4>1</h4>
             <li>Learn HTML by Building a Cat Photo App</li>
             <li>Learn Basic CSS by Building a Cafe Menu</li>
@@ -26,7 +27,7 @@
             <h4>2</h4>
             <li></li>
         </ul>
-
+        </div>
             <div class="fcc-projects">
                 <a href="freecodecamp/survey-form/index.html" target="_blank">
                 <img src="images/FCC-project-1-screenshot.png"></a>
