add 2nd <ul> content

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -15,16 +15,22 @@
         <img src="images/rabbit-purple-circle 3.png" class="header-img"></a>
         <h1><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank">freecodecamp</a> responsive web dev certification projects.</h1>
         <h2>Responsive Web Development Certification → Exercises</h2>
-        
-        <div class="exercises"><ul>
+
+        <div class="exercises">
+            <ul>
             <h4>1</h4>
             <li>Learn HTML by Building a Cat Photo App</li>
             <li>Learn Basic CSS by Building a Cafe Menu</li>
             <li>Learn CSS Colors by Building a Set of Color Markers</li>
             <li>Learn HTML forms by Building a Registration Form</li>
-            <li></li>
-        </ul><ul>
+            <li>Certification Project: Survey Form</li>
+        </ul>
+        <ul>
             <h4>2</h4>
+            <li>Learn the CSS Box Model by Building a Rothko Painting</li>
+            <li>Learn CSS Flexbox by Building a Photo Gallery</li>
+            <li>Learn Typography by Building a Nutrition Label</li>
+            <li>Learn Accessibility by Building a Quiz</li>
             <li></li>
         </ul>
         </div>
