--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -31,31 +31,26 @@
             <li>Learn CSS Flexbox by Building a Photo Gallery</li>
             <li>Learn Typography by Building a Nutrition Label</li>
             <li>Learn Accessibility by Building a Quiz</li>
-            <li></li>
+            <li>Certification Project: Tribute Page</li>
         </ul>
         <h3>3</h3>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Learn More About CSS Pseudo Selectors by Building a Balance Sheet</li>
+            <li>Learn Intermediate CSS by Building a Picasso Painting</li>
+            <li>Learn Responsive Web Design by Building a Piano</li>
+            <li>Certification Project: Technical Documentation Page</li>
         </ul>
         <h3>4</h3>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Learn CSS Variables by Building a City Skyline</li>
+            <li>Learn CSS Grid by Building a Magazine</li>
+            <li>Certification Project: Product Landing Page</li>
         </ul>
         <h3>5</h3>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Learn CSS Animation by Building a Ferris Wheel</li>
+            <li>Learn CSS Transforms by Building a Penguin</li>
+            <li>Certification Project: Personal Portfolio Webpage</li>
         </ul>
 
 
