fixed typo in project URL

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -36,7 +36,7 @@
         <h3>3</h3>
         <ul>
             <li>Learn More About CSS Pseudo Selectors by Building a Balance Sheet</li>
-            <li><a href="freecodecamp/p-painting/index.html"></a>Learn Intermediate CSS by Building a Picasso Painting</a></li>
+            <li><a href="freecodecamp/p-painting/index.html">Learn Intermediate CSS by Building a Picasso Painting</a></li>
             <li>Learn Responsive Web Design by Building a Piano</li>
             <li>Certification Project: Technical Documentation Page</li>
         </ul>
