--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -35,7 +35,7 @@
         </ul>
         <h3>3</h3>
         <ul>
-            <li>Learn More About CSS Pseudo Selectors by Building a Balance Sheet</li>
+            <li><a href="freecodecamp/balance-sheet/index.html">Learn More About CSS Pseudo Selectors by Building a Balance Sheet</a></li>
             <li><a href="freecodecamp/p-painting/index.html" target="_blank">Learn Intermediate CSS by Building a Picasso Painting</a></li>
             <li>Learn Responsive Web Design by Building a Piano</li>
             <li>Certification Project: Technical Documentation Page</li>
