add <figure> and <figcaption> for Tribute Page

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -32,8 +32,13 @@
             <li>Learn Typography by Building a Nutrition Label</li>
             <li>Learn Accessibility by Building a Quiz</li>
             <li>Certification Project: Tribute Page</li>
-            <li><a href="freecodecamp/tribute-page/index.html" target="_blank">
-                <img src="images/tribute-page-screenshot.png" width="35%"></a></li>
+            <li>
+                <figure>
+                <a href="freecodecamp/tribute-page/index.html" target="_blank">
+                <img src="images/tribute-page-screenshot.png" width="35%"></a>
+                <figcaption>Certification Project: Tribute Page</figcaption>
+                </figure>
+            </li>
         </ul>
         <h3>3</h3>
         <ul>
