--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -31,7 +31,7 @@
             <li>Learn CSS Flexbox by Building a Photo Gallery</li>
             <li>Learn Typography by Building a Nutrition Label</li>
             <li>Learn Accessibility by Building a Quiz</li>
-            <li>Certification Project: Tribute Page</li>
+            <li><a href="freecodecamp/tribute-page/index.html" target="_blank"></a>Certification Project: Tribute Page</a></li>
                 <a href="freecodecamp/tribute-page/index.html" target="_blank">
                 <img src="images/tribute-page-screenshot.png" width="35%"></a>
         </ul>
