moved Survey Form project img + URL to section 1

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -23,7 +23,9 @@
             <li>Learn Basic CSS by Building a Cafe Menu</li>
             <li>Learn CSS Colors by Building a Set of Color Markers</li>
             <li>Learn HTML forms by Building a Registration Form</li>
-            <li>Certification Project: Survey Form</li>
+            <li><a href="freecodecamp/survey-form/index.html" target="_blank">Certification Project: Survey Form</a></li>
+            <a href="freecodecamp/survey-form/index.html" target="_blank">
+                <img src="images/FCC-project-1-screenshot.png"></a>
         </ul>
         <h3>2</h3>
         <ul>
