removed width from Tribute Page img

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -35,7 +35,7 @@
             <li>Learn Accessibility by Building a Quiz</li>
             <li><a href="freecodecamp/tribute-page/index.html" target="_blank">Certification Project: Tribute Page</a></li>
                 <a href="freecodecamp/tribute-page/index.html" target="_blank">
-                <img src="images/tribute-page-screenshot.png" width="35%"></a>
+                <img src="images/tribute-page-screenshot.png"></a>
         </ul>
         <h3>3</h3>
         <ul>
