--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -41,7 +41,7 @@
         <ul>
             <li><a href="freecodecamp/balance-sheet/index.html" target="_blank">Learn More About CSS Pseudo Selectors by Building a Balance Sheet</a></li>
             <li><a href="freecodecamp/p-painting/index.html" target="_blank">Learn Intermediate CSS by Building a Picasso Painting</a></li>
-            <li><a href="freecodecamp/piano/index.html">Learn Responsive Web Design by Building a Piano</a></li>
+            <li><a href="freecodecamp/piano/index.html" target="_blank">Learn Responsive Web Design by Building a Piano</a></li>
             <li>Certification Project: Technical Documentation Page</li>
             <a href="#" target="_blank">
                 <img src="images/project-placeholder.png"></a>
