Add URL for Tech Doc project

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -42,8 +42,8 @@
             <li><a href="freecodecamp/balance-sheet/index.html" target="_blank">Learn More About CSS Pseudo Selectors by Building a Balance Sheet</a></li>
             <li><a href="freecodecamp/p-painting/index.html" target="_blank">Learn Intermediate CSS by Building a Picasso Painting</a></li>
             <li><a href="freecodecamp/piano/index.html" target="_blank">Learn Responsive Web Design by Building a Piano</a></li>
-            <li>Certification Project: Technical Documentation Page</li>
-            <a href="#" target="_blank">
+            <li><a href="freecodecamp/tech-documentation/index.html" target="_blank">Certification Project: Technical Documentation Page</a></li>
+            <a href="freecodecamp/tech-documentation/index.html" target="_blank">
                 <img src="images/project-placeholder.png"></a>
         </ul>
         <h3>4</h3>
