--- a/freecodecamp/tech-documentation/index.html
+++ b/freecodecamp/tech-documentation/index.html
@@ -12,7 +12,7 @@
 </head>
 	<body>
     <nav id="navbar">
-      <header>JS Documentation</header>
+      <header>HTML5 Documentation</header>
         <ul>
           <li><a class="nav-link" href="#Intro">Intro</a></li>
           <li><a class="nav-link" href="#Knowledge">Knowledge</a></li>
@@ -30,8 +30,9 @@
     <main id="main-doc">
       <section class="main-section" id="Intro">
         <header>Intro</header>
-        <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. Inside a host environment (for example, a web browser), JavaScript can be connected to the objects of its environment to provide programmatic control over them.</p>
+        <p>The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
         <p>JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of language elements such as operators, control structures, and statements. Core JavaScript can be extended for a variety of purposes by supplementing it with additional objects.</p>
+        <p>Source: <a href="https://en.wikipedia.org/wiki/HTML">Wikipedia</a></p>
         <ul>
           <li>Client-side JavaScript extends the core language by supplying objects to control a browser and its Document Object Model (DOM). For example, client-side extensions allow an application to place elements on an HTML form and respond to user events such as mouse clicks, form input, and page navigation.</li>
           <li>Server-side JavaScript extends the core language by supplying objects relevant to running JavaScript on a server. For example, server-side extensions allow an application to communicate with a database, provide continuity of information from one invocation to another of the application, or perform file manipulations on a server.</li>
