--- a/freecodecamp/tech-documentation/index.html
+++ b/freecodecamp/tech-documentation/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon">
+    <link rel="icon" href="img/icons8-html.svg" alt="HTML5 icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
