--- a/freecodecamp/tech-documentation/index.html
+++ b/freecodecamp/tech-documentation/index.html
@@ -32,7 +32,7 @@
         <header>Intro</header>
         <p>The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
         <p>JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of language elements such as operators, control structures, and statements. Core JavaScript can be extended for a variety of purposes by supplementing it with additional objects.</p>
-        <p>Source: <a href="https://en.wikipedia.org/wiki/HTML">Wikipedia</a></p>
+        
         <ul>
           <li>Client-side JavaScript extends the core language by supplying objects to control a browser and its Document Object Model (DOM). For example, client-side extensions allow an application to place elements on an HTML form and respond to user events such as mouse clicks, form input, and page navigation.</li>
           <li>Server-side JavaScript extends the core language by supplying objects relevant to running JavaScript on a server. For example, server-side extensions allow an application to communicate with a database, provide continuity of information from one invocation to another of the application, or perform file manipulations on a server.</li>
@@ -88,6 +88,11 @@ greetMe("World");</code>
 not defined</code>
     </section>
 
+      <footer>
+        <h2>Technical Documentation Project Credits:</h2>
+        <a target="_blank" href="https://icons8.com/icon/20909/html-5">HTML</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+        <p>Information source: <a href="https://en.wikipedia.org/wiki/HTML">Wikipedia</a></p>
+      </footer>
     </main>
 	</body>
 </html>
