--- a/freecodecamp/tech-documentation/index.html
+++ b/freecodecamp/tech-documentation/index.html
@@ -7,7 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Technical Documentation Page</title>
+	<title>HTML5 Technical Documentation Page</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 	<body>
