add 24px size favicon

--- a/freecodecamp/tech-documentation/index.html
+++ b/freecodecamp/tech-documentation/index.html
@@ -12,7 +12,8 @@
 </head>
 	<body>
     <nav id="navbar">
-      <header>HTML5 Documentation</header>
+      
+      <header><img src="img/icons8-html-24px.svg">HTML5 Documentation</header>
         <ul>
           <li><a class="nav-link" href="#Intro">Intro</a></li>
           <li><a class="nav-link" href="#Knowledge">Knowledge</a></li>
