typo fix in Intro copy

--- a/freecodecamp/tech-documentation/index.html
+++ b/freecodecamp/tech-documentation/index.html
@@ -43,7 +43,7 @@
         
         <ul>
           <li>HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects such as interactive forms may be embedded into the rendered page. HTML provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes, and other items. HTML elements are delineated by tags, written using angle brackets.</li>
-          <li>Som tags directly introduce content into the page. Other tags surround and provide information about document text and may include sub-element tags. Browsers do not display the HTML tags but use them to interpret the content of the page.</li>
+          <li>Some tags directly introduce content into the page. Other tags surround and provide information about document text and may include sub-element tags. Browsers do not display the HTML tags but use them to interpret the content of the page.</li>
         </ul>
       </section>
       <section class="main-section" id="History">
@@ -106,10 +106,10 @@
           
           <p>HTML e-mail: Most graphical email clients allow the use of a subset of HTML (often ill-defined) to provide formatting and semantic markup not available with plain text. This may include typographic information like colored headings, emphasized and quoted text, inline images and diagrams. Many such clients include both a GUI editor for composing HTML e-mail messages and a rendering engine for displaying them. Use of HTML in e-mail is criticized by some because of compatibility issues, because it can help disguise phishing attacks, because of accessibility issues for blind or visually impaired people, because it can confuse spam filters and because the message size is larger than plain text.</p>
 
-        <!--<code>if (true) { var x = 5; } console.log(x); // 5</code>
+        <code>if (true) { var x = 5; } console.log(x); // 5</code>
         <p>This behavior changes, when using the let declaration introduced in ECMAScript 2015.</p>
         <code>if (true) { let y = 5; } console.log(y); // ReferenceError: y is
-not defined</code>-->
+not defined</code>
     </section>
 
     <section class="main-section" id="Naming_conventions">
