updated tech doc screenshot URL for FCC page

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -44,7 +44,7 @@
             <li><a href="freecodecamp/piano/index.html" target="_blank">Learn Responsive Web Design by Building a Piano</a></li>
             <li><a href="freecodecamp/tech-documentation/index.html" target="_blank">Certification Project: Technical Documentation Page</a></li>
             <a href="freecodecamp/tech-documentation/index.html" target="_blank">
-                <img src="images/"></a>
+                <img src="images/technical-documentation-screenshot.png"></a>
         </ul>
         <h3>4</h3>
         <ul>
