add URL for CatPhotoApp exercise page

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -19,7 +19,7 @@
         <div class="exercises">
         <h3>1</h3>
         <ul>
-            <li>Learn HTML by Building a Cat Photo App</li>
+            <li><a href="freecodecamp/images/CatPhotoApp.html">Learn HTML by Building a Cat Photo App</a></li>
             <li>Learn Basic CSS by Building a Cafe Menu</li>
             <li>Learn CSS Colors by Building a Set of Color Markers</li>
             <li>Learn HTML forms by Building a Registration Form</li>
