--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -20,7 +20,7 @@
         <h3>1</h3>
         <ul>
             <li><a href="freecodecamp/images/CatPhotoApp.html" target="_blank">Learn HTML by Building a Cat Photo App</a></li>
-            <li>Learn Basic CSS by Building a Cafe Menu</li>
+            <li><a href="freecodecamp/cafe-menu/index.html" target="_blank">Learn Basic CSS by Building a Cafe Menu</a></li>
             <li>Learn CSS Colors by Building a Set of Color Markers</li>
             <li>Learn HTML forms by Building a Registration Form</li>
             <li><a href="freecodecamp/survey-form/index.html" target="_blank">Certification Project: Survey Form</a></li>
