--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -22,7 +22,7 @@
             <li><a href="freecodecamp/images/CatPhotoApp.html" target="_blank">Learn HTML by Building a Cat Photo App</a></li>
             <li><a href="freecodecamp/cafe-menu/index.html" target="_blank">Learn Basic CSS by Building a Cafe Menu</a></li>
             <li><a href="freecodecamp/colored-markers/index.html" target="_blank">Learn CSS Colors by Building a Set of Color Markers</a></li>
-            <li>Learn HTML forms by Building a Registration Form</li>
+            <li><a href="freecodecamp/registration-form/index.html" target="_blank">Learn HTML forms by Building a Registration Form</a></li>
             <li><a href="freecodecamp/survey-form/index.html" target="_blank">Certification Project: Survey Form</a></li>
             <a href="freecodecamp/survey-form/index.html" target="_blank">
                 <img src="images/FCC-project-1-screenshot.png"></a>
