alt text for survey form project img

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -25,7 +25,7 @@
             <li><a href="freecodecamp/registration-form/index.html" target="_blank">Learn HTML forms by Building a Registration Form</a></li>
             <li><a href="freecodecamp/survey-form/index.html" target="_blank">Certification Project: Survey Form</a></li>
             <a href="freecodecamp/survey-form/index.html" target="_blank">
-                <img src="images/FCC-project-1-screenshot.png"></a>
+                <img src="images/FCC-project-1-screenshot.png" alt="Screenshot of Survey Form project"></a>
         </ul>
         <h3>2</h3>
         <ul>
