--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -29,7 +29,7 @@
         </ul>
         <h3>2</h3>
         <ul>
-            <li>Learn the CSS Box Model by Building a Rothko Painting</li>
+            <li><a href="painting/index.html" target="_blank">Learn the CSS Box Model by Building a Rothko Painting</a></li>
             <li>Learn CSS Flexbox by Building a Photo Gallery</li>
             <li>Learn Typography by Building a Nutrition Label</li>
             <li>Learn Accessibility by Building a Quiz</li>
