add URL for flexbox gallery exercise

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -30,7 +30,7 @@
         <h3>2</h3>
         <ul>
             <li><a href="freecodecamp/painting/index.html" target="_blank">Learn the CSS Box Model by Building a Rothko Painting</a></li>
-            <li>Learn CSS Flexbox by Building a Photo Gallery</li>
+            <li><a href="freecodecamp/flexbox-gallery/index.html" target="_blank">Learn CSS Flexbox by Building a Photo Gallery</a></li>
             <li>Learn Typography by Building a Nutrition Label</li>
             <li>Learn Accessibility by Building a Quiz</li>
             <li><a href="freecodecamp/tribute-page/index.html" target="_blank">Certification Project: Tribute Page</a></li>
