add URL for accessibility quiz project

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -32,7 +32,7 @@
             <li><a href="freecodecamp/painting/index.html" target="_blank">Learn the CSS Box Model by Building a Rothko Painting</a></li>
             <li><a href="freecodecamp/flexbox-gallery/index.html" target="_blank">Learn CSS Flexbox by Building a Photo Gallery</a></li>
             <li><a href="freecodecamp/nutrition-label/index.html" target="_blank">Learn Typography by Building a Nutrition Label</a></li>
-            <li>Learn Accessibility by Building a Quiz</li>
+            <li><a href="freecodecamp/quiz/index.html" target="_blank">Learn Accessibility by Building a Quiz</a></li>
             <li><a href="freecodecamp/tribute-page/index.html" target="_blank">Certification Project: Tribute Page</a></li>
                 <a href="freecodecamp/tribute-page/index.html" target="_blank">
                 <img src="images/tribute-page-screenshot.png"></a>
