--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -16,7 +16,7 @@
         <h1><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank">freecodecamp</a> responsive web dev certification projects.</h1>
         <h2>Responsive Web Development Certification → Exercises</h2>
 
-        <div class="exercises">
+        <div class="course-section">
         <h3>1</h3>
         <ul>
             <li><a href="freecodecamp/images/CatPhotoApp.html" target="_blank">Learn HTML by Building a Cat Photo App</a></li>
@@ -27,6 +27,9 @@
             <a href="freecodecamp/survey-form/index.html" target="_blank">
                 <img src="images/FCC-project-1-screenshot.png" alt="Screenshot of Survey Form project"></a>
         </ul>
+        </div>
+
+        <div class="course-section">
         <h3>2</h3>
         <ul>
             <li><a href="freecodecamp/painting/index.html" target="_blank">Learn the CSS Box Model by Building a Rothko Painting</a></li>
@@ -37,6 +40,9 @@
                 <a href="freecodecamp/tribute-page/index.html" target="_blank">
                 <img src="images/tribute-page-screenshot.png"></a>
         </ul>
+        </div>
+
+        <div class="course-section">
         <h3>3</h3>
         <ul>
             <li><a href="freecodecamp/balance-sheet/index.html" target="_blank">Learn More About CSS Pseudo Selectors by Building a Balance Sheet</a></li>
@@ -46,6 +52,8 @@
             <a href="freecodecamp/tech-documentation/index.html" target="_blank">
                 <img src="images/technical-documentation-screenshot.png"></a>
         </ul>
+
+        <div class="course-section">
         <h3>4</h3>
         <ul>
             <li>Learn CSS Variables by Building a City Skyline</li>
@@ -54,6 +62,9 @@
             <a href="#" target="_blank">
                 <img src="images/project-placeholder.png"></a>
         </ul>
+        </div>
+
+        <div class="course-section"><
         <h3>5</h3>
         <ul>
             <li>Learn CSS Animation by Building a Ferris Wheel</li>
@@ -62,6 +73,8 @@
             <a href="#" target="_blank">
                 <img src="images/project-placeholder.png"></a>
         </ul>
+        </div>
+        
         <hr>
         <p><a href="freecodecamp/CSS-cursor-fun.html">CSS Cursor Property Test Page</a></p>
     </body>
