--- a/hey-bunny-hey.html
+++ b/hey-bunny-hey.html
@@ -14,7 +14,13 @@
 <body class="hey-bunny-page">
     <img src="images/reading-bunny-700px.png" class="header-img">
     <nav>
-        
+        <a href="index.html">Home</a>
+        <a href="freecodecamp.html">freeCodeCamp</a>
+        <a href="scrimba.html">Scrimba</a>
+        <a href="skillcrush.html">Skillcrush</a>>
+        <a href="about.html">About</a>
+        <a href="credits.html">Credits</a>
+        <a href="https://github.com/Victoria-Farr">GitHub</a>
     </nav>
     <h1>Year of the rabbit.</h1>
     <p>Hey, bunny, hey. What's this all about?</p>
@@ -26,19 +32,4 @@
 
     <hr>
 </body>
-
-<footer>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="freecodecamp.html">freeCodeCamp</a></li>
-            <li><a href="scrimba.html">Scrimba</a></li>
-            <li><a href="skillcrush.html">Skillcrush</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="credits.html">Credits</a></li>
-            <li><a href="https://github.com/Victoria-Farr">GitHub</a></li>
-        </ul>
-    </nav>
-</footer>
-
 </html>
