--- a/hey-bunny-hey.html
+++ b/hey-bunny-hey.html
@@ -17,7 +17,7 @@
         <a href="index.html">Home</a>
         <a href="freecodecamp.html">freeCodeCamp</a>
         <a href="scrimba.html">Scrimba</a>
-        <a href="skillcrush.html">Skillcrush</a>>
+        <a href="skillcrush.html">Skillcrush</a>
         <a href="about.html">About</a>
         <a href="credits.html">Credits</a>
         <a href="https://github.com/Victoria-Farr">GitHub</a>
