--- a/scrimba.html
+++ b/scrimba.html
@@ -21,17 +21,12 @@
             <br>
     </body>
     
-    <footer>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="freecodecamp.html">freeCodeCamp</a></li>
-                <li><a href="scrimba.html">Scrimba</a></li>
-                <li><a href="skillcrush.html">Skillcrush</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="credits.html">Credits</a></li>
-                <li><a href="https://github.com/Victoria-Farr">GitHub</a></li>
-            </ul>
-        </nav>
-    </footer>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="freecodecamp.html">freeCodeCamp</a>
+        <a href="scrimba.html">Scrimba</a>
+        <a href="skillcrush.html">Skillcrush</a>
+        <a href="about.html">About</a>
+        <a href="https://github.com/Victoria-Farr">GitHub</a>
+    </nav>
 </html>
