removed cursor exp files

--- a/scrimba.html
+++ b/scrimba.html
@@ -12,7 +12,7 @@
     <body>
         <a href="hey-bunny-hey.html">
         <img src="images/coding-bunny-stands-700px.png" class="header-img"></a>
-        <h1>Scrimba exercise notes + projects</h1>
+        <h1>Scrimba exercises - notes + projects</h1>
             <ul>
                 <li>
                     <p>Exercise: <a href="scrimba/build-a-personal-site/index.html">Build a Personal Website</a></p>
