--- a/sketchbook.html
+++ b/sketchbook.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
-<body class="hey-bunny-page">
+<body>
     <img src="images/reading-bunny-700px.png" class="header-img">
     <h1>sketchbook</h1>
     <p>Various exercises + experiments</p>
