moved cursor files to new location

--- a/sketchbook.html
+++ b/sketchbook.html
@@ -16,7 +16,7 @@
     <h1>sketchbook</h1>
     <p>Various exercises + experiments</p>
     <ul>
-        <li></li>
+        <li><a href="sketchbook/cursor-experiment/CSS-cursor-fun.html">Cursor Experiment</a></li>
         <li></li>
     </ul>
     <hr>
