--- a/sketchbook.html
+++ b/sketchbook.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>put the bunny back in the box (model)</title>
+    <title>sketchbook</title>
     <meta charset="UTF-8">
     <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon"><link rel="stylesheet" href="styles.css">
  
@@ -11,14 +11,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="sketchbook">
     <img src="images/reading-bunny-700px.png" class="header-img">
     <h1>sketchbook</h1>
     <p>Various exercises + experiments</p>
-    <ul>
-        <li><a href="sketchbook/cursor-experiment/CSS-cursor-fun.html">Cursor Experiment</a></li>
-        <li></li>
-    </ul>
+    <a href="sketchbook/cursor-experiment/CSS-cursor-fun.html" target="_blank">Cursor Experiment</a>
+    <a href="sketchbook/URL-styling.html" target="_blank">
     <hr>
     <nav>
         <a href="index.html">Home</a>
