--- a/sketchbook.html
+++ b/sketchbook.html
@@ -16,7 +16,7 @@
     <h1>sketchbook</h1>
     <p>Various exercises + experiments</p>
     <a href="sketchbook/cursor-experiment/CSS-cursor-fun.html" target="_blank">Cursor Experiment</a>
-    <a href="sketchbook/URL-styling.html" target="_blank">
+    <a href="sketchbook/URL-styling.html" target="_blank">URL Styling</a>
     <hr>
     <nav>
         <a href="index.html">Home</a>
