video CSS styling initial

--- a/sketchbook.html
+++ b/sketchbook.html
@@ -12,9 +12,8 @@
 </head>
 
 <body class="sketchbook">
-    <img src="images/reading-bunny-700px.png" class="header-img">
 
-    <video width="700" height="700" autoplay muted>
+    <video width="700" height="700" autoplay muted loop>
         <source src="images/yay-bunny.mp4" type="video/mp4">
       </video>
     
