--- a/sketchbook.html
+++ b/sketchbook.html
@@ -14,7 +14,7 @@
 <body class="sketchbook">
 
     <video width="700" height="700" autoplay muted loop>
-        <source src="images/yay-bunny.mp4" type="video/mp4">
+        <source src="images/hooray-bunny-square.mp4" type="video/mp4">
       </video>
     
     
