sketchbook <video> add and initial styling

--- a/sketchbook.html
+++ b/sketchbook.html
@@ -13,8 +13,8 @@
 
 <body class="sketchbook">
 
-    <video width="700" height="700" autoplay muted loop>
-        <source src="images/hooray-bunny-square.mp4" type="video/mp4">
+    <video autoplay muted loop>
+        <source src="images/confetti-bunny-300px-full.mp4" type="video/mp4">
       </video>
     
     
