--- a/sketchbook/URL-styling.html
+++ b/sketchbook/URL-styling.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <title>put the bunny back in the box (model)</title>
+    <title>sketchbook</title>
     <meta charset="UTF-8">
-    <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon"><link rel="stylesheet" href="../styles.css">
+    <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon"><link rel="stylesheet" href="URL-styling.CSS">
  
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,9 +12,23 @@
 </head>
 
 <body>
-    <img src="images/reading-bunny-700px.png" class="header-img">
     <h1>sketchbook</h1>
-    <p>URL styling options</p>
+    <ul style="list-style-type:none;">
+        <li><p>TEXT-DECORATION PROPERTY</p></li>
+        <li><h1>rabbit &#x2022; <a href="#">overline</a></h1></li>
+        <li><h2>bunny bunny &#x2022; <a href="#">line-through</a></h2></li>
+        <li><h3>hare hare hare &#x2022; <a href="#">underline</a></h3></li>
+        <li><h4>lapin lapin lapin lapin &#x2022; <a href="#">underline overline</a></h4></li>
+    </ul>
+    <ul style="list-style-type:none;">
+        <li><p>TEXT-DECORATION-COLOR PROPERTY</p></li>
+        <li><h5>conejo conejo conejo conejo conejo &#x2022; <a href="#">text-decoration-color</a></h5></li>
+        <li><h6>kanin kanin kanin kanin kanin kanin &#x2022; <a href="#"></a></h6></li>
+    </ul>
+    <ul style="list-style-type:none;">
+        <li><p>TEXT-DECORATION-STYLE PROPERTY</p></li>
+        <li></li>
+    </ul>
    
     <hr>
     <nav>
