text decoration thickness styling

--- a/sketchbook/URL-styling.html
+++ b/sketchbook/URL-styling.html
@@ -4,7 +4,7 @@
 <head>
     <title>sketchbook</title>
     <meta charset="UTF-8">
-    <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon"><link rel="stylesheet" href="URL-styling.CSS">
+    <link rel="icon" href="../images/icons8-pencil-50.png" alt="pencil icon"><link rel="stylesheet" href="URL-styling.CSS">
  
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
     </ul>
     <ul style="list-style-type:none;">
         <li><p>TEXT-DECORATION-COLOR PROPERTY</p></li>
-        <li><h5>conejo conejo conejo conejo conejo &#x2022; <a href="#">text-decoration-color</a></h5></li>
+        <li><h5>conejo conejo conejo conejo conejo &#x2022; <a href="#">text-decoration-color</a> + text-decoration-thickness</h5></li>
         <li><h6>kanin kanin kanin kanin kanin kanin &#x2022; <a href="#"></a></h6></li>
     </ul>
     <ul style="list-style-type:none;">
