--- a/sketchbook.html
+++ b/sketchbook.html
@@ -31,7 +31,7 @@
         <a href="freecodecamp.html">freeCodeCamp</a>
         <a href="scrimba.html">Scrimba</a>
         <a href="skillcrush.html">Skillcrush</a>
-        <a href="about.html">About</a>
+        <a href="hey-bunny-hey.html">About</a>
         <a href="https://github.com/Victoria-Farr">GitHub</a>
     </nav>
 </body>
