--- a/scrimba.html
+++ b/scrimba.html
@@ -26,6 +26,7 @@
         <a href="freecodecamp.html">freeCodeCamp</a>
         <a href="scrimba.html">Scrimba</a>
         <a href="skillcrush.html">Skillcrush</a>
+        <a href="sketchbook.html">sketchbook</a>
         <a href="hey-bunny-hey.html">About</a>
         <a href="https://github.com/Victoria-Farr">GitHub</a>
     </nav>
