--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     </div>
     <div class="courses">
         <!-- FOR ANOTHER SECTION OF COURSES, IF I GET AROUND TO ANY MORE THIS YEAR!-->
+        <h2>📓 <a href="sketchbook.html">sketchbook</a></h2>
+        <h2>🐇 <a href="hey-bunny-hey.html">About</a></h2>
+        <h2>GitHub</h2>
     </div>
     <hr>
 </body>
