added GitHub section to index page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- FOR ANOTHER SECTION OF COURSES, IF I GET AROUND TO ANY MORE THIS YEAR!-->
         <h2>📓 <a href="sketchbook.html">sketchbook</a></h2>
         <h2>🐇 <a href="hey-bunny-hey.html">About</a></h2>
-        <h2>GitHub</h2>
+        <h2>👩🏻‍💻 <a href="https://github.com/Victoria-Farr">GitHub</a></h2>
     </div>
     <hr>
 </body>
