added code snippet for highlite text quick

--- a/sketchbook/URL-styling.html
+++ b/sketchbook/URL-styling.html
@@ -27,7 +27,12 @@
     </ul>
     <ul style="list-style-type:none;">
         <li><p>TEXT-DECORATION-STYLE PROPERTY</p></li>
-        <li></li>
+        <li>(to highlight text, turn into inline element ⬇️)<br><br>
+            <code>p {
+                display: inline;
+                background-color: pink;
+            }</code>
+        </li>
     </ul>
    
     <hr>
