added <sections> to organize content

--- a/sketchbook/URL-styling.html
+++ b/sketchbook/URL-styling.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>sketchbook</title>
+    <title>URL styling notes</title>
     <meta charset="UTF-8">
     <link rel="icon" href="../images/icons8-pencil-50.png" alt="pencil icon"><link rel="stylesheet" href="URL-styling.CSS">
  
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-    <h1>sketchbook</h1>
+    <h1>URL styling notes</h1>
+    <section>
     <ul style="list-style-type:none;">
         <li><p>TEXT-DECORATION PROPERTY</p></li>
         <li><h1>rabbit &#x2022; <a href="#">overline</a></h1></li>
@@ -20,11 +21,17 @@
         <li><h3>hare hare hare &#x2022; <a href="#">underline</a></h3></li>
         <li><h4>lapin lapin lapin lapin &#x2022; <a href="#">underline overline</a></h4></li>
     </ul>
+    </section>
+
+    <section>
     <ul style="list-style-type:none;">
         <li><p>TEXT-DECORATION-COLOR PROPERTY</p></li>
         <li><h5>conejo conejo conejo conejo conejo &#x2022; <a href="#">text-decoration-color</a> + text-decoration-thickness</h5></li>
         <li><h6>kanin kanin kanin kanin kanin kanin &#x2022; <a href="#"></a></h6></li>
     </ul>
+    </section>
+
+    <section>
     <ul style="list-style-type:none;">
         <li><p>TEXT-DECORATION-STYLE PROPERTY</p></li>
         <li>(to highlight text, turn into inline element ⬇️)<br><br>
@@ -34,7 +41,7 @@
             }</code>
         </li>
     </ul>
-   
+    </section>
     <hr>
     <nav>
         <a href="index.html">Home</a>
