updated nav URLs with proper path

--- a/sketchbook/URL-styling.html
+++ b/sketchbook/URL-styling.html
@@ -44,12 +44,12 @@
     </section>
     <hr>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="freecodecamp.html">freeCodeCamp</a>
-        <a href="scrimba.html">Scrimba</a>
-        <a href="skillcrush.html">Skillcrush</a>
-        <a href="about.html">About</a>
-        <a href="https://github.com/Victoria-Farr">GitHub</a>
+        <a href="../index.html">Home</a>
+        <a href="../freecodecamp.html">freeCodeCamp</a>
+        <a href="../scrimba.html">Scrimba</a>
+        <a href="../skillcrush.html">Skillcrush</a>
+        <a href="../about.html">About</a>
+        <a href="../https://github.com/Victoria-Farr">GitHub</a>
     </nav>
 </body>
 </html>
