added placeholder text for next experiment

--- a/sketchbook.html
+++ b/sketchbook.html
@@ -23,6 +23,7 @@
     <ul>
     <li><a href="sketchbook/cursor-experiment/CSS-cursor-fun.html" target="_blank">Cursor Experiment</a></li>
     <li><a href="sketchbook/URL-styling.html" target="_blank">URL Styling</a></li>
+    <li>Notion-inspired (color scheme) URL hover states</li>
     </ul>
 
     <hr>
