--- a/sketchbook.html
+++ b/sketchbook.html
@@ -4,7 +4,7 @@
 <head>
     <title>sketchbook</title>
     <meta charset="UTF-8">
-    <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon"><link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon"><link rel="stylesheet" href="CSS-variables-styles.css">
  
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,11 +18,13 @@
       </video>
     
     <h1>sketchbook</h1>
-    <p>Various exercises + experiments</p>
+    <p>Working out bits of code for future projects.</p>
 
     <ul>
+        <h4>July 2023</h4>
         <li><a href="sketchbook/URL-styling.html" target="_blank">URL Styling</a></li>
-        <li>Notion-inspired (color scheme) URL hover states</li>
+        <li><a href="sketchbook/CSS-variables/CSS-variables.html">Notion-inspired (color scheme) URL hover states</a></li>
+        <h4>June 2023</h4>
         <li><a href="sketchbook/cursor-experiment/CSS-cursor-fun.html" target="_blank">Cursor Experiment</a></li>
     </ul>
 
