--- a/sketchbook/CSS-variables/CSS-variables.html
+++ b/sketchbook/CSS-variables/CSS-variables.html
@@ -4,7 +4,7 @@
 <head>
     <title>sketchbook</title>
     <meta charset="UTF-8">
-    <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon"><link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon"><link rel="stylesheet" href="CSS-variables-styles.css">
  
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
