--- a/sketchbook/CSS-variables/CSS-variables.html
+++ b/sketchbook/CSS-variables/CSS-variables.html
@@ -11,11 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
-<body class="sketchbook">
-
-    <video autoplay muted loop>
-        <source src="images/confetti-bunny-300px-full.mp4" type="video/mp4">
-      </video>
+<body class="background-img">
     
     <h1>sketchbook</h1>
     <p>Working out bits of code for future projects.</p>
