body styling and updated title

--- a/sketchbook/CSS-variables/CSS-variables.html
+++ b/sketchbook/CSS-variables/CSS-variables.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>sketchbook</title>
+    <title>CSS variables practice - Notion-inspired color scheme</title>
     <meta charset="UTF-8">
     <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon"><link rel="stylesheet" href="CSS-variables-styles.css">
  
@@ -13,7 +13,7 @@
 
 <body class="background-img">
     
-    <h1>sketchbook</h1>
+    <h1>CSS variables practice - Notion-inspired color scheme</h1>
     <p>Working out bits of code for future projects.</p>
 
     <ul>
@@ -24,7 +24,6 @@
         <li><a href="sketchbook/cursor-experiment/CSS-cursor-fun.html" target="_blank">Cursor Experiment</a></li>
     </ul>
 
-    <hr>
     <nav>
         <a href="index.html">Home</a>
         <a href="freecodecamp.html">freeCodeCamp</a>
