added meta elements

--- a/sketchbook/CSS-variables/CSS-variables.html
+++ b/sketchbook/CSS-variables/CSS-variables.html
@@ -3,7 +3,12 @@
 
 <head>
     <title>CSS variables practice - Notion-inspired color scheme</title>
+    
     <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="page description">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon"><link rel="stylesheet" href="CSS-variables-styles.css">
  
     <link rel="preconnect" href="https://fonts.googleapis.com">
