added <p> pokem ipsum content

--- a/sketchbook/CSS-variables/CSS-variables.html
+++ b/sketchbook/CSS-variables/CSS-variables.html
@@ -20,9 +20,11 @@
     
     <h1>CSS variables practice - Notion-inspired color scheme</h1>
 
-    <ul>
+    <p>Pokem ipsum dolor sit amet Musharna Granbull Persian Magnemite Earth Badge Masquerain. Vermilion City Spinarak Meloetta Gigalith Vine Whip Abomasnow Bibarel. Qui officia deserunt mollit Paras Sandile Chingling Genesect Cranidos Glameow. Pika-pi Arceus I like shorts Hypno Ciccino our courage will pull us through Noctowl. Yellow Turtwig Cottonee they're comfy and easy to wear Darkrai Gastrodon Pokemon Master.</p>
+
+    <p>Blastoise Munchlax Rayquaza Weedle what kind of Pokemon are you Banette Staravia. Body Slam Croconaw Lugia Ponyta I know it's my destiny Kadabra Simisage. Growl Pokemon, it's you and me Kirlia Shellder Happiny Karrablast Viridian City. Flying Rotom Gothorita Ledian Wynaut you teach me and I'll teach you Sableye. Razor Leaf Teddiursa Ho-oh Vigoroth Smeargle Ninjask Shedinja.</p>
         
-    </ul>
+    <p>Sapphire Clamperl lorem ipsum dolor sit amet Starmie Simipour Zoroark Swanna. Leech Seed Deino Gorebyss Aerodactyl Mothim Buneary Rotom. Pallet Town Pansear Plusle Smoochum a wild Pokemon appeared Arbok Mesprit. Soul Badge Professor Oak I wanna be the very best Sandshrew Glalie what kind of Pokemon are you Luxio. Celadon City Tynamo Drowzee Stunfisk Seel Mr. Mime to extend our reach to the stars above.</p>
 
     <nav>
         <a href="index.html">Home</a>
