--- a/index.html
+++ b/index.html
@@ -34,11 +34,14 @@
 
 <nav>
     <a href="index.html">Home</a>
-    <a href="freecodecamp.html">freeCodeCamp</a>
-    <a href="scrimba.html">Scrimba</a>
+    <a href="freecodecamp.html">freeCodeCamp</a> 
     <a href="skillcrush.html">Skillcrush</a>
     <a href="sketchbook.html">sketchbook</a>
     <a href="hey-bunny-hey.html">About</a>
-    <a href="https://github.com/Victoria-Farr">GitHub</a>
+    <a href="https://github.com/Victoria-Farr"><i class="fa-brands fa-github fa-xl"></i></a>
+    <i class="fa-brands fa-figma fa-xl" style="color: #000000;"></i>
+    <i class="fa-brands fa-instagram fa-xl"></i>
+    <i class="fa-brands fa-linkedin fa-xl" style="color: #000000;"></i>
+    
 </nav>
 </html>
