--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -12,15 +12,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-	<title>Page Title</title>
+	<title>Product Page</title>
 	</head>
 
 	<body>
-		<script src="index.js"></script>
+		
 	<header>
-		<h1>Page title</h1>
-		<nav></nav>
+		<h1>KORE botanicals</h1>
+		<nav>
+            <ul>
+                <li><a href="#">INGREDIENTS</a></li>
+                <li><a href="#">SOURCING</a></li>
+                <li><a href="#">SHOP</a></li>
+            </ul>
+        </nav>
 	</header>
+    <div class="email">
+        <h2>Purely crafted + ethical. Unveil your skin's KORE</h2>
+        <!-- email input box goes here -->
+        <!-- email input submit button goes here -->
+    </div>
 </body>
 
 <footer>    
