added video placeholder <div>

--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -50,8 +50,13 @@
             <h3>HASSLE-FREE RETURNS</h3>
             <img src="#">
             <p>With our rigorous quality assurances, we guarantee that every item meets our highest standards. Plus, enjoy peace of mind with our hassle-free return policy, allowing you to explore our skincare offerings risk-free.</p>
-        
     </div>
+
+    <div class="video-content">
+        <video></video>
+    </div>
+
+    
 </body>
 
 <footer>    
