--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -56,9 +56,31 @@
         <video></video>
     </div>
 
-    
+    <div class="product-options">
+        <div id="product-1">
+            <h4>ROSE FACIAL OIL</h4>
+            <p class="product-price">$33</p>
+            <p class="product-description">A botanical treasure that nourishes and revitalizes your skin.<br>Infused with the essence of rose oil, this lightweight elixir hydrates and balances, revealing a luminous glow.</p>
+            <!-- SELECT button goes here-->
+        </div>
+        <div id="product-2">
+            <h4>ROSEWATER MIST</h4>
+            <p class="product-price">$22</p>
+            <p class="product-description">A skincare essential infused with the pure essence of roses.<br>This refreshing mist hydrates and revitalizes your skin, restoring its natural glow and vitality.</p>
+            <!-- SELECT button goes here-->
+        </div>
+        <div id="product-3">
+            <h4>ROSE OIL EYE CREAM</h4>
+            <p class="product-price">$44</p>
+            <p class="product-description">Infused with rose oil to nourish and rejuvenate the delicate eye area.<br>This velvety formula targets fine lines, puffiness, and dark circles, revealing a refreshed gaze.</p>
+            <!-- SELECT button goes here-->
+        </div>
+    </div>
 </body>
 
-<footer>    
+<footer>
+    <ul>
+        <li><a href="#">PRIVACY</a></li>
+    </ul>
 </footer>
 </html>
