add footer content

--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -81,6 +81,9 @@
 <footer>
     <ul>
         <li><a href="#">PRIVACY</a></li>
+        <li><a href="#">TERMS</a></li>
+        <li><a href="#">CONTACT</a></li>
     </ul>
+    <p>Copyright 2023 - KORE botanicals</p>
 </footer>
 </html>
