--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -57,7 +57,7 @@
             <li>Learn CSS Variables by Building a City Skyline</li>
             <li>Learn CSS Grid by Building a Magazine</li>
             <li>Certification Project: Product Landing Page</li>
-            <a href="#" target="_blank">
+            <a href="freecodecamp/product-page/index.html" target="_blank">
                 <img src="images/project-placeholder.png"></a>
         </ul>
 
