city skyline project initial commit

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -56,9 +56,7 @@
             <li><h3>4</h3></li>
             <li>Learn CSS Variables by Building a City Skyline</li>
             <li>Learn CSS Grid by Building a Magazine</li>
-            <li>Certification Project: Product Landing Page</li>
-            <a href="freecodecamp/product-page/index.html" target="_blank">
-                <img src="images/project-placeholder.png"></a>
+            <li><a href="freecodecamp/product-page/index.html" target="_blank">Certification Project: Product Landing Page</a></li>
         </ul>
 
 
