--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/icons8-spa-flower-50.png" alt="flower icon">
 
 	<title>Product Page</title>
 	</head>
@@ -86,4 +87,5 @@
     </ul>
     <p>Copyright 2023 - KORE botanicals</p>
 </footer>
+<!-- <a target="_blank" href="https://icons8.com/icon/2tacMuyrsODE/spa-flower">Spa Flower</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
 </html>
