removed font awesome content

--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -19,6 +19,7 @@
 	<body>
 		
 	<header>
+        <img src="img/icons8-spa-flower-50.png" alt="flower logo" />
 		<h1>KORE botanicals</h1>
 		<nav>
             <ul>
@@ -37,19 +38,16 @@
 
     <div class="product-info">
 
-            <!-- font awesome icon 1 -->
-            <img src="#">
+            <!--  icon 1 -->
             <h3>PREMIUM INGREDIENTS</h3>
             <p>Indulge your sense with KORE's meticulously curated, premium-grade ingredients, elevating your skincare experience to new heights.</p>
 
-            <!-- font awesome icon 2 -->
+            <!-- icon 2 -->
             <h3>FREE EXPRESS SHIPPING</h3>
-            <img src="#">
             <p>Experience the convenience of swift and complimentary shipping on all orders, as KORE ensures your skincare essentials reach your doorstep promptly, so you can effortlessly embrace your radiant journey.</p>
 
-            <!-- font awesome icon 3 -->
+            <!-- icon 3 -->
             <h3>HASSLE-FREE RETURNS</h3>
-            <img src="#">
             <p>With our rigorous quality assurances, we guarantee that every item meets our highest standards. Plus, enjoy peace of mind with our hassle-free return policy, allowing you to explore our skincare offerings risk-free.</p>
     </div>
 
