add icons images

--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -39,6 +39,7 @@
     <div class="product-info">
 
             <!--  icon 1 -->
+            <img src=""img/"
             <h3>PREMIUM INGREDIENTS</h3>
             <p>Indulge your sense with KORE's meticulously curated, premium-grade ingredients, elevating your skincare experience to new heights.</p>
 
