--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -39,7 +39,7 @@
     <div class="product-info">
 
             <!--  icon 1 -->
-            <img src=""img/"
+            <img src="img/icons8-spa-flower-100
             <h3>PREMIUM INGREDIENTS</h3>
             <p>Indulge your sense with KORE's meticulously curated, premium-grade ingredients, elevating your skincare experience to new heights.</p>
 
