--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -39,15 +39,17 @@
     <div class="product-info">
 
             <!--  icon 1 -->
-            <img src="img/icons8-spa-flower-100
+            <img src="img/icons8-spa-flower-100.png" alt="flower icon">
             <h3>PREMIUM INGREDIENTS</h3>
             <p>Indulge your sense with KORE's meticulously curated, premium-grade ingredients, elevating your skincare experience to new heights.</p>
 
             <!-- icon 2 -->
+            <img src="img/icons8-delivery-100.png" alt="delivery truck icon">
             <h3>FREE EXPRESS SHIPPING</h3>
             <p>Experience the convenience of swift and complimentary shipping on all orders, as KORE ensures your skincare essentials reach your doorstep promptly, so you can effortlessly embrace your radiant journey.</p>
 
             <!-- icon 3 -->
+            <img src="img/icons8-shopaholic-100.png" alt="shopping bag icon">
             <h3>HASSLE-FREE RETURNS</h3>
             <p>With our rigorous quality assurances, we guarantee that every item meets our highest standards. Plus, enjoy peace of mind with our hassle-free return policy, allowing you to explore our skincare offerings risk-free.</p>
     </div>
