--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -55,7 +55,10 @@
     </div>
 
     <div class="video-content">
-        <video></video>
+        <video autoplay muted loop>
+        <source src="img/roses-water.mp4" type="video/mp4">
+      </video>
+        <!-- viceo is 960 x 540-->
     </div>
 
     <div class="product-options">
