--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -20,7 +20,9 @@
 		
 	<header>
         <img src="img/icons8-spa-flower-50.png" alt="flower logo" />
-		<h1>KORE botanicals</h1>
+        
+
+		<h1>KORE <span style="font-weight:400">botanicals</span></h1>
 		<nav>
             <ul>
                 <li><a href="#">INGREDIENTS</a></li>
