<h2> styling and scratch pad file add

--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -33,9 +33,14 @@
 	</header>
 
     <div class="email">
-        <h2>Purely crafted + ethical. Unveil your skin's KORE</h2>
-        <!-- email input box goes here -->
-        <!-- email input submit button goes here -->
+        <h2>Purely crafted + ethical. Unveil your skin's <span style="font-weight:700">KORE</span>.</h2>
+        <form action="/action_page.php">
+            <fieldset>
+             <label for="email">→</label>
+             <input type="email" id="email" name="email" size="50" placeholder="Your lovely email address..."><br><br>
+             <input type="submit" value="Submit">
+            </fieldset>
+           </form>
     </div>
 
     <div class="product-info">
