--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -38,7 +38,7 @@
             <fieldset>
              <label for="email">→</label>
              <input type="email" id="email" name="email" size="50" placeholder="Your lovely email address..."><br><br>
-             <input type="submit" value="Submit">
+             <input type="submit" value="TELL ME MORE" id="button-style">
             </fieldset>
            </form>
     </div>
@@ -70,19 +70,19 @@
 
     <div class="product-options">
         <div id="product-1">
-            <h4>ROSE FACIAL OIL</h4>
+            <div class="product-name"><h4>ROSE FACIAL OIL</h4></div>
             <p class="product-price">$33</p>
             <p class="product-description">A botanical treasure that nourishes and revitalizes your skin.<br>Infused with the essence of rose oil, this lightweight elixir hydrates and balances, revealing a luminous glow.</p>
             <!-- SELECT button goes here-->
         </div>
         <div id="product-2">
-            <h4>ROSEWATER MIST</h4>
+            <div class="product-name"><h4>ROSEWATER MIST</h4></div>
             <p class="product-price">$22</p>
             <p class="product-description">A skincare essential infused with the pure essence of roses.<br>This refreshing mist hydrates and revitalizes your skin, restoring its natural glow and vitality.</p>
             <!-- SELECT button goes here-->
         </div>
         <div id="product-3">
-            <h4>ROSE OIL EYE CREAM</h4>
+            <div class="product-name"><h4>ROSE OIL EYE CREAM</h4></div>
             <p class="product-price">$44</p>
             <p class="product-description">Infused with rose oil to nourish and rejuvenate the delicate eye area.<br>This velvety formula targets fine lines, puffiness, and dark circles, revealing a refreshed gaze.</p>
             <!-- SELECT button goes here-->
@@ -90,13 +90,12 @@
     </div>
 </body>
 
-<footer>
+<footer id="footer-links">
     <ul>
         <li><a href="#">PRIVACY</a></li>
         <li><a href="#">TERMS</a></li>
         <li><a href="#">CONTACT</a></li>
     </ul>
-    <p>Copyright 2023 - KORE botanicals</p>
+    <p>Copyright 2023 - <span style="font-weight:700">KORE</span> botanicals</p>
 </footer>
-<!-- <a target="_blank" href="https://icons8.com/icon/2tacMuyrsODE/spa-flower">Spa Flower</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
 </html>
