Center video content div

--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -16,7 +16,7 @@
 	<title>Product Page</title>
 	</head>
 
-	<body>
+	<body class="body-main">
 		
 	<header>
         <img src="img/icons8-spa-flower-50.png" alt="flower logo" />
@@ -73,7 +73,8 @@
             <div class="product-name"><h4>ROSE FACIAL OIL</h4></div>
             <p class="product-price">$33</p>
             <p class="product-description">A botanical treasure that nourishes and revitalizes your skin.<br><br>Infused with the essence of rose oil, this lightweight elixir hydrates and balances, revealing a luminous glow.</p>
-            <!-- SELECT button goes here-->
+            
+    
         </div>
         <div id="product-2">
             <div class="product-name"><h4>ROSEWATER MIST</h4></div>
